--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <span class="line"></span>
             </div>
             
-            <a href="#" class="brand-name">
+            <a href="index.html" class="brand-name">
               <img src="assets/images/logo/logo.webp" loading="lazy" alt="" />
             </a>
 
@@ -93,7 +93,7 @@
               </li>
 
               <li>
-                <a href="#">
+                <a href="login.html">
                   <img src="assets/images/icons/user.svg" loading="lazy" alt="" />
                 </a>
               </li>
@@ -118,7 +118,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link active">
+          <a href="index.html" class="nav-link active">
             الرئيسية
           </a>
         </li>
@@ -136,19 +136,19 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="products.html" class="nav-link">
             ساعات
           </a>
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="brands.html" class="nav-link">
             الماركات العالمية
           </a>
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="products.html" class="nav-link">
             مجوهرات
           </a>
         </li>
@@ -227,7 +227,7 @@
               استكشف العلامات التجارية
             </p>
 
-            <a href="#" class="see-more">
+            <a href="brands.html" class="see-more">
               <img src="assets/images/icons/arrow.svg" loading="lazy" alt="" />
 
               <span>
@@ -784,7 +784,6 @@
         </div>
       </div>
     </footer>
-    
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/popper.js"></script>
