--- a/new-password.html
+++ b/new-password.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="assets/css/lib/animate.css" />
     <link rel="stylesheet" href="assets/css/lib/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="assets/css/lib/jquery-ui.min.css" />
+    <link rel="stylesheet" href="assets/css/lib/jquery.ui.slider-rtl.css" />
+    <link rel="stylesheet" href="assets/css/lib/price_range_style.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -70,9 +73,12 @@
     </section>
 
     <script src="assets/js/lib/jquery4.js"></script>
+    <script src="assets/js/lib/jquery-ui.min.js"></script>
+    <script src="assets/js/lib/jquery.ui.slider-rtl.min.js"></script>
     <script src="assets/js/lib/popper.js"></script>
     <script src="assets/js/lib/bootstrap.js"></script>
     <script src="assets/js/lib/swiper-bundle.min.js"></script>
+    <script src="assets/js/lib/price_range_script.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
