--- a/brands.html
+++ b/brands.html
@@ -157,7 +157,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="auction.html" class="nav-link">
             المزاد
           </a>
         </li>
