--- a/brands.html
+++ b/brands.html
@@ -139,7 +139,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="products.html" class="nav-link">
+          <a href="watch.html" class="nav-link">
             ساعات
           </a>
         </li>
@@ -163,7 +163,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="new-products.html" class="nav-link">
             وصل حديثاً
           </a>
         </li>
