add single product pages with all cases

--- a/auction.html
+++ b/auction.html
@@ -353,9 +353,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -387,9 +387,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -421,9 +421,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -455,9 +455,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -489,9 +489,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -523,9 +523,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -557,9 +557,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -591,9 +591,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
@@ -625,9 +625,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         20,000 ريال
