--- a/new-products.html
+++ b/new-products.html
@@ -544,9 +544,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -582,9 +582,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -620,9 +620,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -658,9 +658,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -696,9 +696,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -734,9 +734,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -772,9 +772,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -810,9 +810,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -848,9 +848,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
