--- a/products.html
+++ b/products.html
@@ -544,9 +544,49 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
+  
+                      <p class="desc">
+                        Van Cleef
+                      </p>
+  
+                      <div class="flex-data">
+                        <p>
+                          20,000
+  
+                          <span>
+                            ريال
+                          </span>
+                        </p>
+  
+                        <a href="#" class="custom-btn">
+                          <span class="count_down_product d-block color-primary ms-2"></span>
+
+                          <span class="mx-1">
+                            ساعه
+                          </span>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-lg-4 col-6 mb-3 column">
+                  <div class="product-box">
+                    <div class="image-content">
+                      <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
+  
+                      <div class="type">
+                        جديد
+                      </div>
+                    </div>
+  
+                    <div class="contain">
+                      <a href="single-product.html" class="product-title">
+                        سقنتشر
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -582,9 +622,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -620,9 +660,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -658,9 +698,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -696,9 +736,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -734,9 +774,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -772,9 +812,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
@@ -810,47 +850,9 @@
                     </div>
   
                     <div class="contain">
-                      <h2>
+                      <a href="single-product.html" class="product-title">
                         سقنتشر
-                      </h2>
-  
-                      <p class="desc">
-                        Van Cleef
-                      </p>
-  
-                      <div class="flex-data">
-                        <p>
-                          20,000
-  
-                          <span>
-                            ريال
-                          </span>
-                        </p>
-  
-                        <a href="#" class="custom-btn">
-                          <span>
-                            قابل للتفاوض
-                          </span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-6 mb-3 column">
-                  <div class="product-box">
-                    <div class="image-content">
-                      <img src="assets/images/products/product_1.webp" loading="lazy" alt="" />
-  
-                      <div class="type">
-                        جديد
-                      </div>
-                    </div>
-  
-                    <div class="contain">
-                      <h2>
-                        سقنتشر
-                      </h2>
+                      </a>
   
                       <p class="desc">
                         Van Cleef
