--- a/single-product_auction.html
+++ b/single-product_auction.html
@@ -127,7 +127,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="about-us.html" class="nav-link">
             من نحن
           </a>
         </li>
