--- a/price-rate.html
+++ b/price-rate.html
@@ -127,7 +127,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="about-us.html" class="nav-link active">
+          <a href="about-us.html" class="nav-link">
             من نحن
           </a>
         </li>
@@ -169,7 +169,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="price-rate.html" class="nav-link">
+          <a href="price-rate.html" class="nav-link active">
             التقييم السعري
           </a>
         </li>
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="contain">
             <h1>
-              من نحن
+              التقييم السعري
             </h1>
 
             <ul class="breadcurmb-data">
@@ -193,7 +193,7 @@
 
               <li>
                 <span>
-                  من نحن
+                  التقييم السعري
                 </span>
               </li>
             </ul>
@@ -201,127 +201,214 @@
         </div>
       </section>
 
-      <section class="about-us general-section">
+      <section class="add-product general-section">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="contain">
-                <div class="brand-name">
-                  <img src="assets/images/logo/footer_logo.webp" loading="lazy" alt="" />
-                </div>
+          <form class="form-contain">
+            <div class="row">
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group select-option">
+                  <select class="form-control">
+                    <option value="">
+                      التصنيف
+                    </option>
 
-                <h1>
-                  من نحن
+                    <option value="">
+                      التصنيف
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group select-option">
+                  <select class="form-control">
+                    <option value="">
+                      الماركات
+                    </option>
+
+                    <option value="">
+                      الماركات
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group select-option">
+                  <select class="form-control">
+                    <option value="">
+                      حالة المنتج
+                    </option>
+
+                    <option value="">
+                      حالة المنتج
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group">
+                  <input type="text" class="form-control" placeholder="الموديل" />
+                </div>
+              </div>
+
+              <div class="col-lg-6 mb-4">
+                <h1 class="head">
+                  الملحقات
                 </h1>
 
-                <p>
-                  منصه سعودية مرخصه تتيح للافراد بيع الساعات و المجوهرات العالمية بسرعه و بقيمة عادل
-                </p>
+                <div class="flex-data">
+                  <div class="flex-data">
+                    <div class="wrapper">
+                      <input type="radio" class="radio-check"/>
+  
+                      <label class="radio-title">
+                       فاتورة شراء
+                      </label>
+                    </div>
+                  </div>
+
+                  <div class="wrapper">
+                    <input type="radio" class="radio-check"/>
+
+                    <label class="radio-title">
+                      علبة 
+                    </label>
+                  </div>
+                  
+                  <div class="wrapper">
+                    <input type="radio" class="radio-check"/>
+
+                    <label class="radio-title">
+                      كيس
+                    </label>
+                  </div>
+                  
+                  <div class="wrapper">
+                    <input type="radio" class="radio-check"/>
+
+                    <label class="radio-title">
+                      ضمان
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <h1 class="head">
+                  هل جميع القطع وكالة؟
+                </h1>
+
+                <div class="flex-data">
+                    <div class="wrapper">
+                      <input type="radio" class="radio-check"/>
+  
+                      <label class="radio-title">
+                        نعم
+                      </label>
+                    </div>
+
+                  <div class="wrapper">
+                    <input type="radio" class="radio-check"/>
+
+                    <label class="radio-title">
+                      لا
+                    </label>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group">
+                  <input type="text" class="form-control" placeholder="تاريخ الضمان" />
+                </div>
+              </div>
+
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="from-group select-option">
+                  <select class="form-control">
+                    <option value="">
+                      حالة الخدوش
+                    </option>
+
+                    <option value="">
+                      حالة الخدوش
+                    </option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="col-12 mb-4">
+                <div class="from-group text-area">
+                  <textarea name="" class="form-control" placeholder="الوصف" id="" cols="30" rows="10"></textarea>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="form-group payment-img-contain">
+                  <input type="file" id="paymentFile" accept="image/" multiple="">
+
+                  <label for="paymentFile" class="form-label-shape">
+                    <img src="assets/images/upload.svg" class="upload-icon" alt="">
+                    <span class="title"> أضف صور المنتج</span>
+                  </label>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="row">
+                  <div class="col-lg-3 col-6 mb-1">
+                    <div class="payment-img-content">
+                      <img src="assets/images/products/product_1.webp" alt="" />
+
+                      <div class="remove-Img">
+                        <img src="assets/images/removeImg.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-6 mb-1">
+                    <div class="payment-img-content">
+                      <img src="assets/images/products/product_1.webp" alt="" />
+
+                      <div class="remove-Img">
+                        <img src="assets/images/removeImg.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-6 mb-1">
+                    <div class="payment-img-content">
+                      <img src="assets/images/products/product_1.webp" alt="" />
+
+                      <div class="remove-Img">
+                        <img src="assets/images/removeImg.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-6 mb-1">
+                    <div class="payment-img-content">
+                      <img src="assets/images/products/product_1.webp" alt="" />
+
+                      <div class="remove-Img">
+                        <img src="assets/images/removeImg.svg" alt="">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 mt-4">
+                <button class="custom-btn mt-3" type="button" data-toggle="modal" data-target="#doneMethod">
+                  <span>
+                    أرسل للتقييم
+                  </span>
+                </button>
               </div>
             </div>
-
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="image-content">
-                <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="why general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              لماذا براند ديل؟
-            </h1>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فحص آمن مع توصيل سريع
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فاتورة لانتقال ملكية القطعة
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  تواصل مباشر مع العميل مع حفظ الخصوصية
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  الحماية من المغالاة بالسعر
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="work general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              كيف يعمل براند ديل؟
-            </h1>
-          </div>
-
-          <div class="flex-data">
-            <div class="box">
-              <img src="assets/images/works/work_1.webp" loading="lazy" alt="" />
-
-              <h2>
-                نستلم المنتج من البائع
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_2.webp" loading="lazy" alt="" />
-
-              <h2>
-                نتأكد من أصالته ومطابقته للمواصفات
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_3.webp" loading="lazy" alt="" />
-
-              <h2>
-                نقوم بتغليفه وتعقيمه
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_4.webp" loading="lazy" alt="" />
-
-              <h2>
-                نوصله إلى المشتري
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_5.webp" loading="lazy" alt="" />
-
-              <h2>
-                نحول المبلغ إلى البائع
-              </h2>
-            </div>
-          </div>
+          </form>
         </div>
       </section>
     </main>
@@ -437,6 +524,32 @@
         </div>
       </div>
     </footer>
+
+    <div class="modal fade" id="doneMethod" tabindex="-1" aria-labelledby="doneMethod" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="contain">
+              <h1>
+                عزيزنا المستخدم 
+              </h1>
+
+              <h2>
+                سيتم التحقق من بيانات المنتج وتقديم التقييم السعري لك خلال 12 ساعة
+              </h2>
+
+              <div class="button-contain form-contain justify-content-center">
+                <button class="custom-btn" data-dismiss="modal">
+                  <span>
+                    تم  
+                  </span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
