--- a/single-product-end.html
+++ b/single-product-end.html
@@ -115,7 +115,7 @@
       
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="add-product.html" class="nav-link">
             بيع الآن
           </a>
         </li>
@@ -169,7 +169,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="price-rate.html" class="nav-link">
             التقييم السعري
           </a>
         </li>
