--- a/login.html
+++ b/login.html
@@ -55,11 +55,11 @@
                     </span>
                   </a>
     
-                  <button class="custom-btn mt-3">
+                  <a href="profile.html" class="custom-btn mt-3">
                     <span>
                       تسجيل الدخول
                     </span>
-                  </button>
+                  </a>
 
                   <a href="register.html" class="link">
                     ليس لديك حساب ؟ 
