--- a/notifcation.html
+++ b/notifcation.html
@@ -86,7 +86,7 @@
 
             <ul class="nav-list">
               <li>
-                <a href="#">
+                <a href="notifcation.html">
                   <img src="assets/images/icons/notification.svg" loading="lazy" alt="" />
 
                   <span class="number">
@@ -133,7 +133,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="about-us.html" class="nav-link">
             كيف نعمل
           </a>
         </li>
@@ -145,7 +145,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="brands.html" class="nav-link active">
+          <a href="brands.html" class="nav-link">
             الماركات العالمية
           </a>
         </li>
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="contain">
             <h1>
-              
+              الاشعارات
             </h1>
 
             <ul class="breadcurmb-data">
@@ -193,7 +193,7 @@
 
               <li>
                 <span>
-                  
+                  الاشعارات
                 </span>
               </li>
             </ul>
@@ -201,7 +201,147 @@
         </div>
       </section>
 
+      <section class="single-product general-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
 
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-6 mb-4">
+              <div class="box notfication">
+                <h2 class="number">
+                  عنوان الاشعار
+                </h2>
+
+                <p class="price">
+                  هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى حيث يمكنك أن تولد مثل هذا النص أو العديد 
+                  من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق
+                </p>
+
+                <p class="time">
+                  منذ 3 ساعات
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
