--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <ul class="nav-list">
               <li>
-                <a href="#">
+                <a href="notifcation.html">
                   <img src="assets/images/icons/notification.svg" loading="lazy" alt="" />
 
                   <span class="number">
@@ -132,8 +132,8 @@
           </a>
         </li>
 
-        <li class="nav-item">
-          <a href="#" class="nav-link">
+         <li class="nav-item">
+          <a href="about-us.html" class="nav-link">
             كيف نعمل
           </a>
         </li>
